crates/dioform/tests/derive_contract/fail/field_group_explicit_map_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/derive_contract/fail/field_group_explicit_map_wrong_type.rs:27:14
   |
27 |         zip: ProfileForm::fields().postcode(),
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `FieldPath<ProfileForm, String>`, found `FieldPath<ProfileForm, u32>`
   |
   = note: expected struct `FieldPath<ProfileForm, String>`
              found struct `FieldPath<ProfileForm, u32>`
